--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,7 @@
 @import "tailwindcss";
+@import "slick-carousel/slick/slick.css";
+@import "slick-carousel/slick/slick-theme.css";
+
 
 /* Register Degular Display font */
 @font-face {
@@ -28,5 +31,16 @@ body {
   overflow-x: hidden;
   font-family: 'Satoshi', sans-serif;
 
+}
+/* Remove arrows in Chrome, Safari, Edge */
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Remove arrows in Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
 }
 
